# job_agent

./: README.md  cloudbuild.yaml
job-agent/: .env  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml  web_search_server.py
job-agent/docs/: README.md
job-agent/study/: fastapi.md  gcp_ai_platform.md  langchain.md
purchasing-concierge-a2a/: README.md  main.py  pyproject.toml
purchasing-concierge-a2a/purchasing_concierge/: purchasing_agent.py  remote_agent_connection.py
purchasing-concierge-a2a/remote_seller_agents/job_agent/: __main__.py  agent.py  agent_executor.py  test_cloud_run.py
study/: README.md  modules-reference.md  project-architecture.md
